test/parser/cases/invalid/small/empty_type_argument_list.cp
main()
{
    let value: array<> = [1];
}
